refactor(EIDOMNI-290): improve audience validation logic and enhance error messages